resources/tests/invalid_syntax/statement_continue.ct
//`Statement 'continue' can only appear inside a loop!
//1
fn main()->i64: continue;